# nvda-voicemeeter

./: .gitignore  LICENSE  README.md  SPECIFICATION.md  __main__.py  build.ps1  pyproject.toml
src/nvda_voicemeeter/: __init__.py  builder.py  cdll.py  compound.py  configuration.py  errors.py  models.py  nvda.py  parser.py  popup.py  util.py  window.py
