[project]
name = "nvda_voicemeeter"
version = "0.2.1"
description = "A Voicemeeter app compatible with NVDA"
authors = [
    { name = "onyx-and-iris", email = "code@onyxandiris.online" },
]
dependencies = [
    "pysimplegui>=4.60.5",
    "pyparsing>=3.1.1",
    "voicemeeter-api>=2.4.9",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"

[project.license]
text = "MIT"

[tool.pdm.dev-dependencies]
build = [
    "pyinstaller>=5.1",
]
lint = [
    "black>=23.7.0",
    "flake8>=6.1.0",
]
test = [
    "psgdemos>=1.12.1",
]

[tool.pdm.scripts.build]
shell = "build.ps1"
