[project]
name = "nvda_voicemeeter"
version = "0.6.2"
description = "A Voicemeeter app compatible with NVDA"
authors = [
    { name = "onyx-and-iris", email = "code@onyxandiris.online" },
]
dependencies = [
    "pysimplegui>=4.60.5",
    "pyparsing>=3.1.1",
    "voicemeeter-api>=2.5.3",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"

[project.license]
text = "MIT"

[tool.pdm.dev-dependencies]
build = [
    "pyinstaller>=5.1",
]
lint = [
    "black>=23.7.0",
    "ruff>=0.0.291",
    "mypy>=1.7.0",
]
test = [
    "psgdemos>=1.12.1",
]

[tool.pdm.scripts.build]
shell = "build.ps1"

[tool.black]
line-length = 119

[tool.ruff]
select = [
    "E",
    "F",
]
ignore = [
    "E501",
]
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 119
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "E402",
    "F401",
]
